1.0.19 - changed reconnect rule, added stats route
