# http-server/router/secure.router.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 const secureController = require('../controllers/secure.controller');
 
+router.get('/stats', secureController.stats);
 router.get('/remove-chain-to/:blockId', secureController.removeChainTo);
 
 module.exports = router;
